--- a/config/ViSSpeech/train.yaml
+++ b/config/ViSSpeech/train.yaml
@@ -1,7 +1,7 @@
 path:
-  ckpt_path: "./output/ckpt/ViSSpeech"
-  log_path: "./output/log/ViSSpeech"
-  result_path: "./output/result/ViSSpeech"
+  ckpt_path: "./output/ckpt/LJSpeech"
+  log_path: "./output/log/LJSpeech"
+  result_path: "./output/result/LJSpeech"
 optimizer:
   batch_size: 16
   betas: [0.9, 0.98]
