--- a/config/LJSpeech/model.yaml
+++ b/config/LJSpeech/model.yaml
@@ -34,6 +34,6 @@ max_seq_len: 1000
 
 vocoder:
   model: "HiFi-GAN" # support 'HiFi-GAN', 'MelGAN'
-  speaker: "universal" # support  'LJSpeech', 'universal'
+  speaker: "LJSpeech" # support  'LJSpeech', 'universal'
 
-lang: "vi"
+lang: "en"
