--- a/config/ViSSpeech/preprocess.yaml
+++ b/config/ViSSpeech/preprocess.yaml
@@ -3,11 +3,11 @@ dataset: "ViSSpeech"
 path:
   corpus_path: "./input/ViSSpeech"
   lexicon_path: "lexicon/vi-lexicon.txt"
-  raw_path: "./raw_data/ViSSpeech"
+  raw_path: "./raw_data/"
   preprocessed_path: "./preprocessed_data/ViSSpeech"
 
 preprocessing:
-  val_size: 512
+  val_size: 44
   text:
     text_cleaners: ["vietnamese_cleaners"]
     language: "vi"
