training run ok

--- a/config/infore/preprocess.yaml
+++ b/config/infore/preprocess.yaml
@@ -2,7 +2,7 @@ dataset: "infore"
 
 path:
   corpus_path: "./input/infore"
-  lexicon_path: "lexicon/vi-lexicon.txt"
+  lexicon_path: "lexicon/vi-new-lexicon.txt"
   raw_path: "./raw_data/"
   preprocessed_path: "./preprocessed_data/infore"
 
