--- a/.gitignore
+++ b/.gitignore
@@ -120,138 +120,4 @@ input/
 
 preprocessed_data/
 temp/
-tempdev/
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi_train_acoustic_model.db
-tempev/mixed-en-vi_train_acoustic_model/oov_counts_mixed-en-vi-lexicon.txt
-tempev/mixed-en-vi_train_acoustic_model/oovs_found_mixed-en-vi-lexicon.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/1_mixed-en-vi-lexicon/L.fst
-tempev/mixed-en-vi_train_acoustic_model/dictionary/1_mixed-en-vi-lexicon/lexicon.text_fst
-tempev/mixed-en-vi_train_acoustic_model/dictionary/1_mixed-en-vi-lexicon/word_disambig.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/1_mixed-en-vi-lexicon/words.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/disambiguation_symbols.int
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/disambiguation_symbols.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/extra_questions.int
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/extra_questions.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/graphemes.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/phone_disambig.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/phones.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/roots.int
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/roots.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/sets.int
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/sets.txt
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/topo
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/word_boundary.int
-tempev/mixed-en-vi_train_acoustic_model/dictionary/phones/word_boundary.txt
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/cmvn.ark
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/cmvn.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/feats.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/spk2utt.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/utt2spk.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/cmvn.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/cmvn.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/feats.0.ark
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/feats.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/feats.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/feats.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/feats.1.ark
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/feats.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/segments.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/segments.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/spk2utt.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/spk2utt.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/text.1.0.int.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/text.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/text.1.1.int.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/text.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/utt2spk.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/utt2spk.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/wav.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/split2/wav.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/cmvn.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/cmvn.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/feats.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/feats.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/spk2utt.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/spk2utt.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/text.1.0.int.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/text.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/text.1.1.int.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/text.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/utt2spk.1.0.scp
-tempev/mixed-en-vi_train_acoustic_model/mixed-en-vi/subset_10000/utt2spk.1.1.scp
-tempev/mixed-en-vi_train_acoustic_model/monophone/0.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/1.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/2.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/2.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/3.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/3.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/4.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/4.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/5.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/5.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/6.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/6.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/7.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/7.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/8.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/8.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/9.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/9.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/10.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/10.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/11.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/11.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/12.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/12.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/13.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/13.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/14.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/14.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/15.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/15.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/16.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/16.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/17.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/17.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/18.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/18.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/19.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/19.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/20.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/20.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/21.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/21.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/22.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/22.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/23.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/23.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/24.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/24.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/25.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/25.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/26.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/26.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/27.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/27.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/28.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/28.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/29.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/29.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/30.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/30.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/31.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/31.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/32.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/32.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/33.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/33.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/34.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/34.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/35.mdl
-tempev/mixed-en-vi_train_acoustic_model/monophone/35.occs
-tempev/mixed-en-vi_train_acoustic_model/monophone/ali.1.0.ark
-tempev/mixed-en-vi_train_acoustic_model/monophone/ali.1.1.ark
-tempev/mixed-en-vi_train_acoustic_model/monophone/alignment_log_likelihood.csv
-tempev/mixed-en-vi_train_acoustic_model/monophone/fsts.1.0.ark
-tempev/mixed-en-vi_train_acoustic_model/monophone/fsts.1.1.ark
-tempev/mixed-en-vi_train_acoustic_model/monophone/tree
+tempev/
